--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@ nav ul {
     position: absolute;
     top: 10rem;
     left: 0;
-    background-color: #0d1212;
+    background-color: #0d121200;
     width: 100%;
     box-shadow: rgba(255, 252, 252, 0.25) 0px 14px 28px;
     z-index: 1;
